# stock-analyzer

./: .gitignore  Makefile  README.md  docker-compose.yml
analyzer/cpp/: .gitignore  Dockerfile  Makefile  README.md  analyzers.cpp  analyzers.h  indicators.cpp  indicators.h  main.cpp  sql_client.h
analyzer/cpp/models/: models.h
analyzer/cpp/sql/: sql_client.h
analyzer/cpp/src/: analyzer.cpp  indicator.cpp  main.cpp
analyzer/cpp/src/include/: analyzer.h  drawer.h  indicator.h  models.h  sql_client.h  thread_pool.h
analyzer/cpp/utils/: drawer.h
analyzer/py/: Dockerfile  main.py
apiserver/: Cargo.toml  Dockerfile
apiserver/src/: main.rs  models.rs
apiserver/src/routes/: analyze.rs  fetch.rs  mod.rs
protobuf/: indicator.proto
querier/: Dockerfile  go.mod  main.go
tool/: sqlite_instructions
ui-api-gateway/: dockerfile  package.json
ui_api_gateway/: APIv1.yaml  Dockerfile  mock-server.js  package-lock.json  package.json  server.js
ui_api_gateway/frontend/: Dockerfile.frontend  package.json
ui_api_gateway/frontend/src/app/: routes.ts
ui_api_gateway/frontend/src/app/api/: client.ts
ui_api_gateway/frontend/src/app/components/: StockCard.tsx  StockTable.tsx
ui_api_gateway/frontend/src/app/pages/: Home.tsx  Root.tsx  StockDetail.tsx
yfinance_querier/: Dockerfile  main.py
