[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite   = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono     = { version = "0.4", features = ["serde"] }